# qsharp

./: Cargo.toml  build.py  package-lock.json  package.json  test.py
.github/workflows/: ci.yml
compiler/qsc/: Cargo.toml
compiler/qsc_data_structures/: Cargo.toml
compiler/qsc_frontend/: Cargo.toml
compiler/qsc_fs_util/: Cargo.toml
compiler/qsc_parse/: Cargo.toml
compiler/qsc_parse/src/: expr.rs  item.rs  keyword.rs  lib.rs  predict.rs  prim.rs  scan.rs  stmt.rs  tests.rs  ty.rs
compiler/qsc_parse/src/expr/: tests.rs
compiler/qsc_parse/src/lex/: cooked.rs  raw.rs
compiler/qsc_parse/src/lex/cooked/: tests.rs
compiler/qsc_parse/src/lex/raw/: tests.rs
compiler/qsc_parse/src/predict/: tests.rs  wildcard.rs
compiler/qsc_parse/src/predict/wildcard/: tests.rs
compiler/qsc_parse/src/prim/: tests.rs
compiler/qsc_parse/src/stmt/: modules.rs  tests.rs
compiler/qsc_resolver/: Cargo.toml
compiler/qsc_resolver/src/: lib.rs  source.rs  tests.rs
compiler/qsc_runtime_capabilities/: Cargo.toml
compiler/qsc_runtime_capabilities/src/: lib.rs
language_service/src/: completion.rs  definition.rs  diagnostic.rs  hover.rs  lib.rs  protocol.rs  qsc_utils.rs  test_utils.rs  tests.rs  visitor.rs
npm/: .gitignore  generate_katas_content.js
npm/src/: content1.html  content10.html  content100.html  content101.html  content102.html  content103.html  content104.html  content105.html  content106.html  content107.html  content108.html  content109.html  content11.html  content110.html  content111.html  content112.html  content113.html  content114.html  content115.html  content116.html  content117.html  content118.html  content119.html  content12.html  content120.html  content121.html  content122.html  content123.html  content124.html  content125.html  content126.html  content127.html  content128.html  content129.html  content13.html  content130.html  content131.html  content132.html  content133.html  content134.html  (+121 more)
npm/test/: basics.js
pip/qsharp/: __init__.py  _ipython.py  (+2 more)
samples/: BTA.qs
vscode/: package.json
(+52 files in other folders)
