[package]
name = "qsc_parse"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
enum-iterator = { workspace = true }
miette = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
owned_chars = { workspace = true } 
qsc_ast = { path = "../qsc_ast" }
qsc_data_structures = { path = "../qsc_data_structures" }
qsc_fs_util = { path = "../qsc_fs_util" }
thiserror = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
