[package]
name = "qsc_resolver"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qsc_ast = { path = "../qsc_ast" }
qsc_parse = { path = "../qsc_parse" }

[dev-dependencies]
lazy_static = "1.4"
