[package]
name = "qsc_runtime_capabilities"

version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qsc_data_structures = {path = "../qsc_data_structures" }
qsc_eval = { path = "../qsc_eval" }
qsc_hir = { path = "../qsc_hir" }
qsc_fir = { path = "../qsc_fir" }
qsc_frontend = { path = "../qsc_frontend" }
